[SC-1870] fixed double border for years and quarters

--- a/src/app/cfo/cashflow/cashflow.component.less
+++ b/src/app/cfo/cashflow/cashflow.component.less
@@ -87,8 +87,6 @@
 
                             &.closed {
                                 visibility: hidden;
-                                height: 10px;
-
                                 .main-head-cell {
                                     display: none;
                                 }
